<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <EditTextPreference
            app:key="user_name"
            app:title="@string/user_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="textEmailAddress"
            android:key="user_email_address"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/user_email_address"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/social_header">
        <ListPreference
            app:defaultValue="Facebook"
            app:entries="@array/social_entries"
            app:entryValues="@array/social_values"
            app:key="user_fav_social"
            app:title="@string/favorite_social"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
